Fix ul spacing

--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -29,10 +29,6 @@
     margin-top: 2rem;
   }
 
-  ul, ol {
-    margin-left: 2rem;
-  }
-
   blockquote {
     border-left: 1px solid var(--text-color);
     padding-left: 1rem;
